--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@unocss/preset-web-fonts": "^0.53.6",
     "nuxt": "^3.6.5"
   },
+  "resolutions": {
+    "unstorage": "1.4.1"
+  },
   "dependencies": {
     "@nuxt/content": "^2.5.1",
     "three": "^0.154.0"
